Revision history for Perl module Test::Class::Tiny

0.02 Sat 18 Jan 2020
- Change execution order so that number of tests isn’t used in sorting.

0.01 Fri 27 Dec 2019
- Initial release