@@ -1,6 +1,8 @@
 Revision history for Perl module Test::Class::Tiny
 
 0.02 Sat 18 Jan 2020
+- Fix execution of startup/setup/teardown/shutdown methods.
+- Allow suffix-style naming alongside prefix-style naming.
 - Change execution order so that number of tests isn’t used in sorting.
 
 0.01 Fri 27 Dec 2019
